fixed mobile spacing of animated buttons

--- a/css/about320.css
+++ b/css/about320.css
@@ -3,6 +3,10 @@
   /*position: relative;*/
 }
 
+.animatedButton {
+  padding-left: 0px;
+}
+
 p {
   font-size: 16px;
 }
